fixed nav spacing

--- a/css/index.css
+++ b/css/index.css
@@ -71,8 +71,28 @@ p {
     margin: 0 auto;
 }
 
-header .logo-nav {
+.container header {
+    border: 4px solid red;
+    position: relative;
+}
+
+.container header nav {
+    border: 4px solid blue;
     display: flex;
+    position: absolute;
+    right: 20px;
+    bottom: 0px;
+    width: 600px;
+    justify-content: space-evenly;
+}
+
+.container header nav a {
+   border: 1px solid black;
+   font-size: 12px;
+
+
+   
+   
 }
 
 .top-content {
@@ -103,10 +123,6 @@ header .logo-nav {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-}
-
-.boxes .box1 {
-    background-color: teal;
 }
 
 .middle-content .boxes .box {
